--- a/server/views/braintree.html
+++ b/server/views/braintree.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <script src="https://js.braintreegateway.com/web/dropin/1.33.7/js/dropin.min.js"></script>
+    <script src="https://js.braintreegateway.com/web/dropin/1.36.1/js/dropin.min.js"></script>
 </head>
 
 <body style="display:flex;flex-direction: column;">
     <div id="dropin-container"></div>
-    <button id="submit-button" class="paymentButton">בחירת אמצעי תשלום</button>
+    <button id="submit-button" class="paymentButton"
+        style="padding: .5rem; background-color: white; border-radius: 10px; font-size: 1rem; background-color: #19A7CE; color: white; border: 0;">בחירת
+        אמצעי תשלום</button>
     <script>
         const button = document.querySelector('#submit-button');
     </script>
